--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "homepage": "https://github.com/modulesio/exokit-site#readme",
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "express": "^4.16.4",
-    "three": "^0.98.0"
+    "express": "^4.16.4"
   }
 }
