Update mkdocs.yml theme to be the local one

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,5 +34,7 @@ nav:
       - MagicLeapAPI: MagicLeapAPI.md
       - nativeFutureIntegrations: nativeFutureIntegrations.md
 theme:
-  name: 'material'
+  name: null
+  custom_dir: 'material/'
   favicon: '../media/favicon.png'
+  logo: '../media/logo.svg'
