--- a/mkdocs-material/mkdocs.yml
+++ b/mkdocs-material/mkdocs.yml
@@ -22,7 +22,7 @@
 site_name: Exokit
 # site_description: A Material Design theme for MkDocs
 # site_author: Martin Donath
-# site_url: https://squidfunk.github.io/mkdocs-material/
+site_url: https://new.webmr.io/
 
 # Repository
 # repo_name: squidfunk/mkdocs-material
