Bugfix mkdocs.yml new.webmr.io site_url

--- a/mkdocs-material/mkdocs.yml
+++ b/mkdocs-material/mkdocs.yml
@@ -22,7 +22,7 @@
 site_name: Exokit
 # site_description: A Material Design theme for MkDocs
 # site_author: Martin Donath
-site_url: https://new.webmr.io/
+site_url: https://webmr.io/
 
 # Repository
 # repo_name: squidfunk/mkdocs-material
