update sidebar titles formating

--- a/mkdocs-material/mkdocs.yml
+++ b/mkdocs-material/mkdocs.yml
@@ -100,39 +100,40 @@ markdown_extensions:
 
 # Page tree
 nav:
-  - Home: index.md
   - Docs:
+    - Introduction:
+      - Introduction: index.md
     - Overview:
-      - exokitEngine: exokitEngine.md
-      - benchmarks:  benchmarks.md
-      - architecture: architecture.md
-      - techIntegrations: techIntegrations.md
+      - Exokit Engine: exokitEngine.md
+      - Benchmarks:  benchmarks.md
+      - Architecture: architecture.md
+      - Tech Integrations: techIntegrations.md
     - Quickstart:
-      - installation: installation.md
-      - useExokitEngine: useExokitEngine.md
-      - exokitApps: exokitApps.md
+      - Installation: installation.md
+      - Use Exokit Engine: useExokitEngine.md
+      - Exokit Apps: exokitApps.md
     - Community:
-      - contribute: contribute.md
-      - support: support.md
+      - Contribute: contribute.md
+      - Support: support.md
   - SDK:
     - Exokit SDK:
-      - sdk: sdk.md
+      - SDK: sdk.md
     - Using the SDK:
-      - startDevelopment: startDevelopment.md
-      - exokitCommandLine: exokitCommandLine.md
-      - exokitCommandLineFlags: exokitCommandLineFlags.md
+      - Start Development: startDevelopment.md
+      - Exokit Command Line: exokitCommandLine.md
+      - Exokit Command Line Flags: exokitCommandLineFlags.md
     - Guides:
-      - devExokitEngine: devExokitEngine.md
+      - Develop with Exokit Engine: devExokitEngine.md
     - Web APIs:
-      - webAPIs: webAPIs.md
-      - experimentalWebAPIs: experimentalWebAPIs.md
+      - Web APIs: webAPIs.md
+      - Experimental Web APIs: experimentalWebAPIs.md
     - Native APIs:
-      - nativeAPIs: nativeAPIs.md
-      - MagicLeapAPI: MagicLeapAPI.md
-      - nativeFutureIntegrations: nativeFutureIntegrations.md
+      - Native APIs: nativeAPIs.md
+      - Magic Leap API: MagicLeapAPI.md
+      - Native Future Integrations: nativeFutureIntegrations.md
   - Legal:
-    - terms: terms.md
-    - privacy: privacy.md
+    - Terms and Conditions: terms.md
+    - Privacy Policy: privacy.md
 
 # Google Analytics
 google_analytics:
