--- a/mkdocs-material/mkdocs.yml
+++ b/mkdocs-material/mkdocs.yml
@@ -122,7 +122,27 @@ nav:
       - Exokit Command Line Flags: exokitCommandLineFlags.md
     - Guides:
       - Develop with Exokit Engine: devExokitEngine.md
-    - Web APIs:
+    - Reality Tabs:
+      - Introduction: realityTabsIntro.md
+    - Reality Tab Examples:
+      - Kitchen Sink: realityTabsKitchenSink.md
+      - Tutorial: realityTabsTutorial.md
+      - Exobot: realityTabsExobot.md
+      - Meshing: realityTabsMeshing.md
+      - Planes: realityTabsPlanes.md
+      - Paint: realityTabsPaint.md
+      - Graffiti: realityTabsGraffiti.md
+      - Hands: realityTabsHands.md
+      - Minimap: realityTabsMinimap.md
+      - Avatar: realityTabsAvatar.md
+      - Shooter: realityTabsShooter.md
+      - Sword: realityTabsSword.md
+      - Bow: realityTabsBow.md
+      - Pathfinding: realityTabsPathfinding.md
+      - Radar: realityTabsRadar.md
+      - Image Tracking: realityTabsImageTracking.md
+      - Microphone: realityTabsMicrophone.md
+   - Web APIs:
       - Web APIs: webAPIs.md
       - Experimental Web APIs: experimentalWebAPIs.md
     - Native APIs:
